# robot_assembler_plugin

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: Dockerfile.testbuild  gtest-sample.yaml  test-and-build.yaml
config/: assembler.cnoid  original.cnoid
config/irsl/: blocks.py  irsl_assembler_config.yaml
config/irsl/meshes/: FP04-F2-P_3x3_m.stl  FP04-F2-P_m.stl  FP04-F2-S_m.stl  FP04-F4-P_m.stl  FP04-F4_m.stl  FP04-F53-s_m.stl  FP04-F53_m.stl  angle_2x2_m.stl  ax-12a-f2.stl  ax-12a-f3-p.stl  ax-12a-f3-s.stl  ax-12a-f3-s_3x3_m.stl  ax-12a-f3.stl  cylinder_3_mm.stl  cylinder_5_mm.stl  cylinder_7_mm.stl  diagonal_bracket_mm.stl  grove_color_sensor_m.stl  grove_sensor_mounter_m.stl  omni_shaft_m.stl  omni_wheel_m.stl  plate_2x2_pp_m.stl  sensor-mounter.stl  tof-sensor.stl  ultrasonic.stl  vehicle_base_m.stl  vehicle_base_pp_m.stl  vehicle_base_ps_mm.stl
config/irsl/meshes_xseries/: XL-430_m.stl  bottom_mounter_m.stl  bottom_mounter_mm.stl  fixed_finger.stl  fr12_h101_plug_m.stl  fr12_h101_socket_m.stl  fr12_h103_plug_m.stl  fr12_h103_socket_m.stl  fr12_s101_m.stl  fr12_s101_plug_mm.stl  fr12_s101_socket_mm.stl  fr12_s102_m.stl  fr12_s102_p_m.stl  fr12_s102_s_m.stl  moveable_finger.stl  omni_wheel_shaft_m.stl
config/kxr/: kxr_assembler_config.yaml  kxr_sample.new.roboasm
docs/: parts_list.md
pybind11/: CMakeLists.txt  PyRobotAssembler.cpp  PyRobotAssemblerHelper.cpp  PyRobotAssemblerModule.cpp  PyRobotAssemblerSettings.cpp
sample/: armrobot.roboasm  armrobot_XL-430-2.roboasm  armrobot_XL-430.roboasm
sample/vehicle/: vehicle.roboasm
samples/: assembler_assemble_sample.ipynb  assembler_load_roboasm.ipynb  assembler_parts_device.ipynb  jupytext.yaml  test.roboasm
samples/mymodules/: assembler_assemble_sample.py  assembler_load_roboasm.py  assembler_parts_device.py
src/: AssemblerBar.cpp  AssemblerBar.h  AssemblerForBase.cpp  AssemblerForBase.h  AssemblerItem.cpp  AssemblerItem.h  AssemblerManager.cpp  AssemblerManager.h  AssemblerPartsView.cpp  AssemblerPartsView.h  AssemblerSwapModeBar.cpp  AssemblerSwapModeBar.h  AssemblerTreeView.cpp  AssemblerTreeView.h  AssemblerView.cpp  AssemblerView.h  CMakeLists.txt  RA.qrc  RobotAssembler.cpp  RobotAssembler.h  RobotAssemblerBody.cpp  RobotAssemblerBody.h  RobotAssemblerHelper.cpp  RobotAssemblerHelper.h  RobotAssemblerInfo.cpp  RobotAssemblerInfo.h  RobotAssemblerPlugin.cpp  RobotAssemblerPlugin.h  RobotAssemblerSettings.cpp  RobotAssemblerSettings.h  ValueTreeUtil.h  exportdecl.h  exportdecl_lib.h  irsl_debug.h
src/irsl_choreonoid/: Coordinates.h
test/: CMakeLists.txt  TODO.txt  body2urdf.cpp  failure.sh  load_settings.cpp  test-sample.cpp  test_cui.cpp
tools/: choreonoid_ros_template.cnoid  generate_cnoid.py  generate_roscontroller_config.py  parts_list_generator.py  sim_robot.launch  tof_converter_node.py  wheel_controller_config_sample.yaml  wheelcontroller.py
